# ScanPdf2ebook

./: .gitignore  README.md  main.py  pyproject.toml  video.py  webapp.py
docs/superpowers/specs/: 2026-07-21-web-review-ui-design.md
static/: style.css
templates/: done.html  progress.html  review.html  upload.html
tests/: conftest.py  test_main.py  test_video.py  test_webapp.py
