[project]
name = "scanpdftoepub"
version = "0.1.0"
description = "Scanned PDF -> OCR -> EPUB pipeline"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "pymupdf",
]

[project.scripts]
scanpdftoepub = "webapp:main"

[project.optional-dependencies]
test = [
    "pytest",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "webapp"]
